RESOLVED FIXED220159
Fix incorrect return types of fallback color conversion functions
https://bugs.webkit.org/show_bug.cgi?id=220159
Summary Fix incorrect return types of fallback color conversion functions
Sam Weinig
Reported 2020-12-26 04:37:54 PST
Attachments
Patch (1.91 KB, patch)
2020-12-26 20:37 PST, Sam Weinig
no flags
Sam Weinig
Comment 1 2020-12-26 20:36:17 PST
I accidentally left all the fallback color converter functions return SRGBA, which is not correct. They are not used yet, so this is not observable, but will be used soon so needs to be fixed.
EWS
Comment 2 2020-12-27 10:38:16 PST
Committed r271095: <https://trac.webkit.org/changeset/271095> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416797 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-27 10:39:15 PST
Note You need to log in before you can comment on or make changes to this bug.