Fix incorrect return types of fallback color conversion functions https://bugs.webkit.org/show_bug.cgi?id=220159

Reviewed by Dean Jackson.

* platform/graphics/ColorConversion.h:
Fixup return types of fallback conversion functions to match signature.


Canonical link: https://commits.webkit.org/232692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271095 268f45cc-cd09-0410-ab3c-d52691b4dbfc